# LocalVault

./: .gitignore  README.md  VISION.md  pyproject.toml
docs/: ARCHITECTURE.md  DECISIONS.md  LOCALVAULT_CLAUDE_CONTEXT.md
src/localvault/: main.py
src/localvault/adapters/: classifier.py  confirmation.py  discovery.py  extractor.py  ollama_client.py  presentation.py
src/localvault/domain/: analyze.py  categories.py  errors.py  execute.py  models.py  organizer.py  paths.py
tests/: test_analyze.py  test_confirmation.py  test_execute.py  test_organizer.py  test_paths.py
