[project]
name = "localvault"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pymupdf",
    "pydantic",
    "ollama",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]